--- a/RobotBuilder.yml
+++ b/RobotBuilder.yml
@@ -670,7 +670,7 @@ Children:
 - Name: Operator Interface
   Base: OI
   Children:
-  - Name: MoveJoystick
+  - Name: LeftStick
     Base: Joystick
     Children:
     - Name: ArmInButton
@@ -691,7 +691,7 @@ Children:
           validators: null
           value: '7'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: &id034 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
@@ -715,7 +715,7 @@ Children:
           validators: null
           value: '6'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -739,7 +739,7 @@ Children:
           validators: null
           value: '9'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -763,7 +763,7 @@ Children:
           validators: null
           value: '8'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -787,7 +787,7 @@ Children:
           validators: null
           value: '11'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -811,7 +811,7 @@ Children:
           validators: null
           value: '10'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: MoveJoystick}
+          name: Joystick, validators: null, value: LeftStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -825,7 +825,7 @@ Children:
         name: Number
         validators: &id036 [Joystick]
         value: '1'
-  - Name: RotateJoystick
+  - Name: RightStick
     Base: Joystick
     Children:
     - Name: WallsInButton
@@ -845,7 +845,7 @@ Children:
           validators: null
           value: '11'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: RotateJoystick}
+          name: Joystick, validators: null, value: RightStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -869,7 +869,7 @@ Children:
           validators: null
           value: '9'
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
-          name: Joystick, validators: null, value: RotateJoystick}
+          name: Joystick, validators: null, value: RightStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
           choices: *id034
           default: whileHeld
@@ -1159,14 +1159,6 @@ Children:
     Base: Command Group
     Children: []
     Properties:
-      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
-        name: Button on SmartDashboard, validators: null, value: false}
-  - Name: DriveForward
-    Base: Command
-    Children: []
-    Properties:
-      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Requires, type: Subsystem, validators: null, value: Drivetrain}
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
         name: Button on SmartDashboard, validators: null, value: false}
   - Name: ToggleArm
