--- a/RobotBuilder.yml
+++ b/RobotBuilder.yml
@@ -564,6 +564,34 @@ Children:
       Name: LeftSolenoid
     - Children: []
       Properties:
+        Type: !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id003
+          default: Victor
+          name: Type
+          validators: null
+          value: Victor
+        Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id004
+          default: '1'
+          name: Output Channel (PWM)
+          validators: *id005
+          value: '7'
+        Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id001
+          default: '1'
+          name: Output Module (Digital)
+          validators: *id002
+          value: '1'
+      Base: Speed Controller
+      Name: Magnet
+    Properties:
+      Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Default Command, type: Command, validators: null, value: None}
+    Base: Subsystem
+    Name: Catapult
+  - Children:
+    - Children: []
+      Properties:
         Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
           choices: &id028 ['1', '2']
           default: '1'
@@ -575,28 +603,6 @@ Children:
           default: '1'
           name: Output Channel (Relay)
           validators: &id031 [RelayOutput]
-          value: '4'
-      Base: Spike
-      Name: Magnet
-    Properties:
-      Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Default Command, type: Command, validators: null, value: None}
-    Base: Subsystem
-    Name: Catapult
-  - Children:
-    - Children: []
-      Properties:
-        Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id028
-          default: '1'
-          name: Output Module (Digital)
-          validators: *id029
-          value: '1'
-        Output Channel (Relay): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id030
-          default: '1'
-          name: Output Channel (Relay)
-          validators: *id031
           value: '2'
       Base: Spike
       Name: SpikeOne
